[gd_scene load_steps=12 format=3 uid="uid://b1xmgw2jwmunk"]

[ext_resource type="Texture2D" uid="uid://c2gvwiki601v3" path="res://assets/sprite/display screen.png" id="1_4qidw"]
[ext_resource type="Script" path="res://src/ui/command_screen/command_screen.gd" id="1_rladp"]
[ext_resource type="Texture2D" uid="uid://8m1r17nptfyg" path="res://assets/sprite/space_map.png" id="2_tgm10"]
[ext_resource type="Texture2D" uid="uid://d3pj8wans2lr4" path="res://assets/sprite/circle.png" id="3_4kwp3"]
[ext_resource type="PackedScene" uid="uid://1dd0jvugd41x" path="res://src/ui/command_screen/star_map/StarMap.tscn" id="3_jn7gj"]
[ext_resource type="Texture2D" uid="uid://d65nfli1chn0" path="res://assets/sprite/square.png" id="4_hkjqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywpr8"]
size = Vector2(450, 235)

[sub_resource type="Curve2D" id="Curve2D_ncuok"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 106, -63, 0, 0, 0, 0, 87, -78, 0, 0, 0, 0, 35, -60, 0, 0, 0, 0, -1, -14, 0, 0, 0, 0, -6, -3, 0, 0, 0, 0, 8, 38)
}
point_count = 6

[sub_resource type="Animation" id="Animation_0rfvp"]
resource_name = "hide"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(595, 0), Vector2(1119, 0)]
}

[sub_resource type="Animation" id="Animation_uvmic"]
resource_name = "show"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1119, 0), Vector2(595, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vxeel"]
_data = {
"hide": SubResource("Animation_0rfvp"),
"show": SubResource("Animation_uvmic")
}

[node name="CommandScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_rladp")

[node name="DeviceFrame" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1119.0
offset_right = 1777.0
offset_bottom = 685.0
texture = ExtResource("1_4qidw")

[node name="TabContainer" type="TabContainer" parent="DeviceFrame"]
layout_mode = 0
offset_left = 47.0
offset_top = 192.0
offset_right = 500.0
offset_bottom = 460.0

[node name="Travel" type="TabBar" parent="DeviceFrame/TabContainer"]
layout_mode = 2
mouse_filter = 1

[node name="SpaceMap" type="TextureRect" parent="DeviceFrame/TabContainer/Travel"]
visible = false
layout_mode = 0
offset_top = 1.0
offset_right = 453.0
offset_bottom = 236.0
texture = ExtResource("2_tgm10")

[node name="MarginContainer" type="SubViewportContainer" parent="DeviceFrame/TabContainer/Travel"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -117.5
offset_right = 225.0
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="Area2D" type="Area2D" parent="DeviceFrame/TabContainer/Travel/MarginContainer"]
position = Vector2(224.5, 117)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeviceFrame/TabContainer/Travel/MarginContainer/Area2D"]
shape = SubResource("RectangleShape2D_ywpr8")

[node name="SubViewport" type="SubViewport" parent="DeviceFrame/TabContainer/Travel/MarginContainer"]
handle_input_locally = false
size = Vector2i(450, 235)
render_target_update_mode = 4

[node name="StarMap" parent="DeviceFrame/TabContainer/Travel/MarginContainer/SubViewport" instance=ExtResource("3_jn7gj")]
position = Vector2(1167.5, 224)
poisson_radius = 32.0

[node name="ProgressView" type="Control" parent="DeviceFrame/TabContainer/Travel"]
visible = false
anchors_preset = 0
offset_left = 289.0
offset_top = 118.0
offset_right = 289.0
offset_bottom = 118.0

[node name="Path2D" type="Path2D" parent="DeviceFrame/TabContainer/Travel/ProgressView"]
position = Vector2(-7, 0)
curve = SubResource("Curve2D_ncuok")

[node name="PathFollow2D" type="PathFollow2D" parent="DeviceFrame/TabContainer/Travel/ProgressView/Path2D"]
position = Vector2(106, -63)
rotation = -2.4733
loop = false

[node name="Sprite2D" type="Sprite2D" parent="DeviceFrame/TabContainer/Travel/ProgressView/Path2D/PathFollow2D"]
modulate = Color(1, 0.0588235, 0, 1)
position = Vector2(-0.707031, -0.707092)
rotation = 2.35619
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("3_4kwp3")

[node name="PathChoiceView" type="Control" parent="DeviceFrame/TabContainer/Travel"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = 289.0
offset_top = 118.0
offset_right = 289.0
offset_bottom = 118.0

[node name="Sprite2D2" type="TextureRect" parent="DeviceFrame/TabContainer/Travel/PathChoiceView"]
self_modulate = Color(0.117647, 0.117647, 0.117647, 0.937255)
layout_mode = 0
offset_left = -286.0
offset_top = -117.0
offset_right = -222.0
offset_bottom = -53.0
scale = Vector2(7, 3.70312)
texture = ExtResource("4_hkjqs")

[node name="VBoxContainer" type="VBoxContainer" parent="DeviceFrame/TabContainer/Travel/PathChoiceView"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -266.0
offset_top = -68.0
offset_right = -123.0
offset_bottom = 68.0
grow_horizontal = 0
grow_vertical = 2

[node name="Button" type="Button" parent="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer"]
layout_mode = 2
text = "Default path"

[node name="Button2" type="Button" parent="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer"]
layout_mode = 2
text = "Intergalatic route"

[node name="Button3" type="Button" parent="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer"]
layout_mode = 2
text = "Asteroid field"

[node name="Button4" type="Button" parent="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer"]
layout_mode = 2
text = "Void field"

[node name="DescLabel" type="Label" parent="DeviceFrame/TabContainer/Travel/PathChoiceView"]
layout_mode = 0
offset_left = -99.0
offset_top = -70.0
offset_right = 144.0
offset_bottom = 70.0
text = "Intergalatic route:
Chosen this path will make it more likely to meet other travellers."
autowrap_mode = 2

[node name="ChangePathButton" type="Button" parent="DeviceFrame/TabContainer/Travel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -41.0
offset_right = 53.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
toggle_mode = true
text = "Change path"

[node name="Cryostasis Citizen" type="TabBar" parent="DeviceFrame/TabContainer"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="DeviceFrame/TabContainer/Cryostasis Citizen"]
self_modulate = Color(0.0156863, 0.0784314, 0.152941, 1)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 451.0
offset_bottom = 235.0
texture = ExtResource("4_hkjqs")

[node name="TitleLabel" type="Label" parent="DeviceFrame/TabContainer/Cryostasis Citizen"]
layout_mode = 0
offset_left = 59.0
offset_top = 15.0
offset_right = 386.0
offset_bottom = 67.0
text = "Wake up hibernating citizen to get more crew member"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CountLabel" type="Label" parent="DeviceFrame/TabContainer/Cryostasis Citizen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -28.0
offset_right = 68.0
grow_horizontal = 2
grow_vertical = 0
text = "Woke up 0 citizen"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="DeviceFrame/TabContainer/Cryostasis Citizen"]
layout_mode = 0
offset_left = 140.0
offset_top = 128.0
offset_right = 303.0
offset_bottom = 159.0
text = "Wake up 1 citzen"

[node name="CostLabel" type="Label" parent="DeviceFrame/TabContainer/Cryostasis Citizen"]
layout_mode = 0
offset_left = 166.0
offset_top = 103.0
offset_right = 276.0
offset_bottom = 129.0
text = "Cost: 15 water"

[node name="WarningLabel" type="Label" parent="DeviceFrame/TabContainer/Cryostasis Citizen"]
visible = false
self_modulate = Color(1, 0.0392157, 0.054902, 1)
layout_mode = 0
offset_left = 109.0
offset_top = 161.0
offset_right = 337.0
offset_bottom = 187.0
text = "Warning: not enough housing"

[node name="ShowHideCommandScreen" type="Button" parent="DeviceFrame"]
layout_mode = 0
offset_left = -2.0
offset_top = 461.0
offset_right = 248.0
offset_bottom = 492.0
rotation = -1.57079
toggle_mode = true
text = "Show Command Screen"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../DeviceFrame")
libraries = {
"": SubResource("AnimationLibrary_vxeel")
}

[connection signal="tab_changed" from="DeviceFrame/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="mouse_entered" from="DeviceFrame/TabContainer/Travel/MarginContainer/Area2D" to="DeviceFrame/TabContainer/Travel/MarginContainer/SubViewport/StarMap" method="_on_viewport_mouse_entered"]
[connection signal="mouse_exited" from="DeviceFrame/TabContainer/Travel/MarginContainer/Area2D" to="DeviceFrame/TabContainer/Travel/MarginContainer/SubViewport/StarMap" method="_on_viewport_mouse_exited"]
[connection signal="pressed" from="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer/Button" to="." method="_on_default_path_pressed"]
[connection signal="pressed" from="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer/Button2" to="." method="_on_intergalatic_route_pressed"]
[connection signal="pressed" from="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer/Button3" to="." method="_on_asteroid_field_pressed"]
[connection signal="pressed" from="DeviceFrame/TabContainer/Travel/PathChoiceView/VBoxContainer/Button4" to="." method="_on_void_field_pressed"]
[connection signal="toggled" from="DeviceFrame/TabContainer/Travel/ChangePathButton" to="." method="_on_change_path_button_toggled"]
[connection signal="pressed" from="DeviceFrame/TabContainer/Cryostasis Citizen/Button" to="." method="_on_wake_up_citizen"]
[connection signal="toggled" from="DeviceFrame/ShowHideCommandScreen" to="." method="_on_show_hide_travel_screen_toggled"]
